--- a/CityGuide/CityGuide/Classes/Controllers/InfoController/InfoController.xib
+++ b/CityGuide/CityGuide/Classes/Controllers/InfoController/InfoController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -30,7 +30,20 @@
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hL-jP-gDE">
                             <rect key="frame" x="8" y="44" width="552" height="495"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <string key="text">Интерактивное городское приложение. Все права защищены. По вопросам функционирования и размещения в приложении просьба связываться с нами черезформу обратной связи или по e-mail: andrei_kutovoi@mail.ru+7 (915) 012-35-06Автор идеи и разработчик - Кутовой АндрейПрограммист под Android - Гилевич АртемПрограммист под IOS - Тарас СорокинДизайн - Александрина МирошниченкоПомощь в реализации - Кутовая Екатерина</string>
+                            <string key="text">Интерактивное городское приложение. 
+Все права защищены. 
+
+По вопросам функционирования и размещения в приложении просьба связываться с нами через
+форму обратной связи 
+или по e-mail: 
+andrei_kutovoi@mail.ru
++7 (915) 012-35-06
+
+Автор идеи и разработчик - Кутовой Андрей
+Программист под Android - Гилевич Артем
+Программист под IOS - Тарас Сорокин
+Дизайн - Александрина Мирошниченко
+Помощь в реализации - Кутовая Екатерина</string>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES"/>
