--- a/CityGuide/CityGuide/Classes/Views/MainHeaderView/MainHeaderView.xib
+++ b/CityGuide/CityGuide/Classes/Views/MainHeaderView/MainHeaderView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -14,7 +14,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="483" height="260"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Domodedovo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CQb-0h-7lg">
-                    <rect key="frame" x="29" y="36" width="157" height="21"/>
+                    <rect key="frame" x="17" y="36" width="157" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="157" id="VU7-DN-tPu"/>
                         <constraint firstAttribute="height" constant="21" id="jcd-0v-Fpz"/>
@@ -24,10 +24,10 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TJJ-U6-epa">
-                    <rect key="frame" x="402" y="32" width="39" height="30"/>
+                    <rect key="frame" x="231" y="32" width="39" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="Afq-rE-UgB"/>
-                        <constraint firstAttribute="width" constant="39" id="vWk-W0-cLJ"/>
+                        <constraint firstAttribute="height" constant="30" id="OP5-fX-bjX"/>
+                        <constraint firstAttribute="width" constant="39" id="kI3-VJ-RVp"/>
                     </constraints>
                     <state key="normal" image="info_x">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -40,12 +40,12 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="VO6-ZS-SZ2" firstAttribute="top" secondItem="rov-Yi-RtX" secondAttribute="top" id="CtM-XR-hLo"/>
-                <constraint firstItem="TJJ-U6-epa" firstAttribute="centerY" secondItem="CQb-0h-7lg" secondAttribute="centerY" id="QAp-ZR-oRI"/>
+                <constraint firstItem="TJJ-U6-epa" firstAttribute="leading" secondItem="CQb-0h-7lg" secondAttribute="trailing" constant="57" id="M9c-dm-WTQ"/>
                 <constraint firstAttribute="trailing" secondItem="VO6-ZS-SZ2" secondAttribute="trailing" id="f5p-g1-u5m"/>
                 <constraint firstItem="VO6-ZS-SZ2" firstAttribute="leading" secondItem="rov-Yi-RtX" secondAttribute="leading" id="ijt-SX-8fZ"/>
                 <constraint firstAttribute="bottom" secondItem="VO6-ZS-SZ2" secondAttribute="bottom" id="lO7-dL-03z"/>
-                <constraint firstAttribute="trailing" secondItem="TJJ-U6-epa" secondAttribute="trailing" constant="42" id="nbJ-4i-5qg"/>
-                <constraint firstItem="CQb-0h-7lg" firstAttribute="leading" secondItem="rov-Yi-RtX" secondAttribute="leading" constant="29" id="pw8-pV-9UK"/>
+                <constraint firstItem="CQb-0h-7lg" firstAttribute="leading" secondItem="rov-Yi-RtX" secondAttribute="leading" constant="17" id="pw8-pV-9UK"/>
+                <constraint firstItem="TJJ-U6-epa" firstAttribute="top" secondItem="rov-Yi-RtX" secondAttribute="top" constant="32" id="rwL-zE-oE8"/>
                 <constraint firstItem="CQb-0h-7lg" firstAttribute="top" secondItem="rov-Yi-RtX" secondAttribute="top" constant="36" id="wHf-zF-cr0"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
